samples/_failures_safe/1761202983_740aab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03d38dfb.c: In function ‘main’:
./samples/SAFE/__tmp_03d38dfb.c:147:5: error: expected identifier or ‘(’ at end of input
  147 |     GraphOperation
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_03d38dfb.c:147:5: error: expected declaration or statement at end of input
